doc: add goal to readme

--- a/README
+++ b/README
@@ -3,6 +3,11 @@ dmx-dimmer. The name will change to something less meaningful by
 production time. It is based on Hendrik Hoelscher's dimmer. See [1] on
 the latter.
 
+The goal is to produce schematics, PCB layouts and code, all available
+in a form that allows modification and homebrew manufacture. This is
+important, since tool/material/component availability varies from place
+to place.
+
 Many modifications have been made, but most importantly:
 
 - support up to 12 channels;
