--- a/README
+++ b/README
@@ -24,9 +24,9 @@ custom symbols/footprints are missing from the tree. I will try to
 include them ASAP.
 
 gEDA [2] was chosen to do the design work. As to why is a topic for a
-whole article. Mainly, I wanted to see whether it's good enough for big
-projects. The short answer is no. Then again, I might be doing something
-wrong.
+whole article. Mainly, I wanted to see whether it's good enough for
+big projects. The short answer is maybe. Then again, I might be doing
+something wrong.
 
 [1] http://www.hoelscher-hi.de/hendrik/english/dimmer.htm
 [2] http://www.gpleda.org/index.html
